test/src/e2e_vm_tests/test_programs/should_fail/recover_unexpected_character/src/main.sw
ยง

contract;

fn a() -> bool {
    ยง
    0 // recovery witness
}
